# asmlib-opencv

./: .gitignore  README.md
src/demo/: CMakeLists.txt  demo.py  main.cpp
src/lib/: CMakeLists.txt  afreader.cpp  afreader.h  asmmodel.cpp  asmmodel.h  modelfile.cpp  modelfile.h  modelimage.cpp  modelimage.h  python.cpp  shapeinfo.cpp  shapeinfo.h  shapemodel.cpp  shapemodel.h  shapevec.cpp  shapevec.h  similaritytrans.cpp  similaritytrans.h
